--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
+    "html-react-parser": "^3.0.16",
     "install-peerdeps": "^3.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
