--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-inner-image-zoom": "^3.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
