--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
+    "cogo-toast": "^4.2.3",
     "html-react-parser": "^3.0.16",
     "install-peerdeps": "^3.0.3",
     "placeholder-loading": "^0.6.0",
